Исправлен ряд ошибок, вызывавших падение приложения и возврат пустых результатов при поиске.

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 
     // Spring AI
     implementation 'org.springframework.ai:spring-ai-starter-model-ollama'
