Реализация RBAC/ACL Extractor, Test Gap Analyzer, Auth Risk Detector, Flaky Test Detector, Root Cause Analyzer, Spec Drift Sentinel, Coverage Estimator, Impact Analyzer

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ ext {
     resilience4jVersion = '2.3.0'
     jgitVersion = '6.9.0.202403050737-r'
     swaggerParserVersion = '2.1.22'
+
+    // Flyway + PG
+    flywayVersion = '11.11.1'
+    flywayPostgresModuleVersion = "${flywayVersion}"
+    postgresqlVersion = '42.7.7'
 }
 
 repositories {
@@ -37,7 +42,6 @@ dependencyManagement {
 dependencies {
     // Spring Boot Starters
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -46,19 +50,31 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 
+    // HTTP-клиент Reactor Netty, необходимый для WebClient
+    implementation 'io.projectreactor.netty:reactor-netty-http'
+
     // Spring AI
     implementation 'org.springframework.ai:spring-ai-starter-model-ollama'
     implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'
 
-    // База данных
-    runtimeOnly 'org.postgresql:postgresql'
-    implementation 'org.flywaydb:flyway-core'
-    implementation 'org.flywaydb:flyway-database-postgresql'
+    // Flyway (core + pg module)
+    implementation "org.flywaydb:flyway-core:${flywayVersion}"
+    implementation "org.flywaydb:flyway-database-postgresql:${flywayPostgresModuleVersion}"
+
+    // PostgreSQL JDBC
+    runtimeOnly "org.postgresql:postgresql:${postgresqlVersion}"
+
+    // JAXB / XML (для OpenAPI/Jackson/JAXB-совместимости)
+    // Если в приложении уже есть jakarta.xml.bind:... (4.x) — это совместимость Jakarta; ниже добавлены
+    // старые javax-совместимые артефакты в качестве runtime-резерва.
+    runtimeOnly 'javax.xml.bind:jaxb-api:2.3.1'
+    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
+    implementation 'com.fasterxml.jackson.module:jackson-module-jaxb-annotations' // чтоб Jackson понимал JAXB-аннотации
 
     // Утилиты и Code Generation
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
-    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+    compileOnly "org.mapstruct:mapstruct:${mapstructVersion}"
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
@@ -67,6 +83,10 @@ dependencies {
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'io.micrometer:context-propagation:1.1.1'
     implementation 'org.jsoup:jsoup:1.17.2'
+
+    // JAXB API for OpenAPI/Swagger compatibility on Java 11+ (jakarta)
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
+    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
 
     // Отказоустойчивость и RAG-компоненты
     implementation 'io.github.resilience4j:resilience4j-spring-boot3'
