Реализация Hallucination Filter, PII/Secrets Guard, Access Policy Enforcer, Prompt/Audit Logger, Chunker/Reranker Tuner, LLM Router/Cost Controller

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,6 +54,7 @@ spring:
     cache-names:
       - vector_search_results # Кэш для результатов RAG-поиска.
       - token_counts # Кэш для подсчета токенов.
+      - ollama_available_models # Кэш для списка доступных моделей
     caffeine:
       # Настройки кэша: макс. 500 записей, время жизни записи 10 минут.
       spec: maximumSize=500,expireAfterWrite=10m
@@ -68,16 +69,10 @@ spring:
       # нужно было бы использовать имя сервиса: `http://rag-ollama:11434`.
       base-url: http://localhost:11434
       chat:
-        # Теперь это конфигурация ПО УМОЛЧАНИЮ
+        # Теперь это конфигурация ПО УМОЛЧАНИЮ. Она будет использоваться, если модель не переопределена роутером.
         options:
-          model: llama3
+          model: llama3 # Модель по умолчанию, если роутер не сработает
           temperature: 0.7
-        # Определяем профили для разных моделей
-        profiles:
-          llava-chat:
-            options:
-              model: llava
-              temperature: 0.2 # Для анализа точность важнее креативности
       embedding:
         options:
           # Модель для создания векторных представлений (эмбеддингов).
@@ -199,19 +194,25 @@ resilience4j:
 # Custom Application Properties (app.*)
 # ===================================================================
 app:
+  # Конфигурация LLM Роутера
+  llm:
+    # Имя модели, которая будет использоваться, если основная модель недоступна.
+    fallback-model: "llama3"
+    # Маппинг абстрактных возможностей на конкретные имена моделей в Ollama.
+    models:
+      FAST: "phi3"       # Быстрая модель для классификации, рутинга и т.д.
+      BALANCED: "llama3" # Основная модель для RAG и чата
+      VISION: "llava"      # Мультимодальная модель для анализа изображений
+
   prompt:
-    # Имя файла шаблона. Путь теперь задается в spring.freemarker.template-loader-path
     rag-template-path: "rag-prompt.ftl"
 
-  # Гибкая конфигурация Reranker Agent
   reranking:
-    enabled: true # Глобальный переключатель для всего сервиса переранжирования
-    # Конфигурация для отдельных стратегий. Позволяет включать/выключать
-    # и настраивать каждую стратегию независимо (принцип OCP).
+    enabled: true
     strategies:
       keyword-boost:
         enabled: true
-        boost-factor: 0.1 # Коэффициент усиления за каждое совпавшее слово
+        boost-factor: 0.1
 
   rate-limiting:
     enabled: true
@@ -221,19 +222,14 @@ app:
         refill-period-minutes: 1
 
   tokenization:
-    # "o200k_base" - для Llama 3, Mistral.
-    # "cl100k_base" - для моделей OpenAI (GPT-4, GPT-3.5).
     encoding-model: "o200k_base"
 
   context:
-    # Макс. кол-во токенов под контекст. Оставляем запас для системного промпта,
-    # вопроса пользователя и генерации ответа. Для Llama-3 (8k) 4k - безопасный лимит.
     max-tokens: 4096
 
   chat:
     history:
-      # Количество последних сообщений для поддержания контекста.
-      max-messages: 10
+      max-messages: 10 # Количество последних сообщений для поддержания контекста.
 
   ingestion:
     chunking:
@@ -245,14 +241,13 @@ app:
     response-timeout: 285s # Общий таймаут на получение ответа
     read-write-timeout: 285s # Таймаут на чтение/запись данных
 
-  task-executor:
-    # Настройки основного пула потоков для @Async задач.
+  task-executor: # Настройки основного пула потоков для @Async задач.
     core-pool-size: 4
     max-pool-size: 16
     queue-capacity: 100
     thread-name-prefix: "app-async-"
-  # Настройки для векторного хранилища (pgvector)
-  vector-store:
+
+  vector-store: # Настройки для векторного хранилища (pgvector)
     # Параметры HNSW-индекса для тюнинга производительности и точности.
     # Изменять с осторожностью, требуется профилирование.
     index:
@@ -330,3 +325,23 @@ app:
       repository-url: "https://github.com/your-org/your-repo.git"
       # Персональный токен доступа (PAT) с правами на чтение репозитория
       personal-access-token: "ghp_YourGitPersonalAccessToken"
+
+  # Настройки безопасности
+  security:
+    pii-redaction:
+      # Глобальный переключатель для сервиса маскирования.
+      # Установите в 'false' для отключения маскирования.
+      enabled: true
+      # Список регулярных выражений для поиска чувствительных данных.
+      # ВАЖНО: Тщательно протестируйте паттерны на ваших данных.
+      patterns:
+        # Универсальный паттерн для Email
+        - "\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b"
+        # Паттерн для номеров телефонов (упрощенный, для примера)
+        - "\\b(?:\\+?7|8)?[\\s\\-]?\\(?\\d{3}\\)?[\\s\\-]?\\d{3}[\\s\\-]?\\d{2}[\\s\\-]?\\d{2}\\b"
+        # Паттерн для поиска API-ключей (например, GitHub ghp_..., Stripe sk_live_...)
+        - "\\b(ghp|sk_live|rk_live)_[a-zA-Z0-9]{20,}\\b"
+        # Паттерн для поиска JWT токенов
+        - "ey[a-zA-Z0-9_\\-]+\\.[a-zA-Z0-9_\\-]+\\.[a-zA-Z0-9_\\-]+"
+        # Паттерн для поиска IP-адресов
+        - "\\b(?:[0-9]{1,3}\\.){3}[0-9]{1,3}\\b"
