--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     compileOnly "org.mapstruct:mapstruct:${mapstructVersion}"
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+    implementation 'com.github.javaparser:javaparser-core:3.27.0'
 
     // Observability & Docs
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
