--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -195,13 +195,6 @@ resilience4j:
 # Custom Application Properties (app.*)
 # ===================================================================
 app:
-  optimization: # Конфигурация для агента оптимизации индекса
-    index:
-      enabled: true # Включает/выключает запуск оптимизатора по расписанию.
-      cron: "0 0 4 * * ?" # Cron-выражение. По умолчанию - каждый день в 4 утра.
-      stale-document-detection:
-        enabled: true # Включает/выключает этап очистки "осиротевших" чанков.
-
   # Конфигурация LLM Роутера
   llm:
     # Имя модели, которая будет использоваться, если основная модель недоступна.
@@ -298,7 +291,22 @@ app:
       # Запускать каждый день в 3:00 ночи
       cron: "0 0 3 * * ?"
 
-  # Настройки для интеграций с внешними системами
+  optimization:
+    index:
+      enabled: true
+      cron: "0 0 4 * * ?"
+      stale-document-detection:
+        enabled: true
+
+  # Настройки для аналитических агентов
+  analysis:
+    flakiness:
+      # Порог в процентах. Тест считается "flaky", если падает чаще, чем в 5% случаев.
+      failure-rate-threshold: 5.0
+      # Минимальное количество запусков теста, чтобы он попал в анализ.
+      # Предотвращает ложные срабатывания для новых тестов.
+      min-runs-threshold: 10
+
   integrations:
     github:
       # Секрет, который вы настраиваете в GitHub для подписи веб-хуков.
