--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -195,12 +195,9 @@ resilience4j:
 # Custom Application Properties (app.*)
 # ===================================================================
 app:
-  # Конфигурация LLM Роутера
-  llm:
-    # Имя модели, которая будет использоваться, если основная модель недоступна.
-    fallback-model: "llama3"
-    # Маппинг абстрактных возможностей на конкретные имена моделей в Ollama.
-    models:
+  llm: # Конфигурация LLM Роутера
+    fallback-model: "llama3" # Имя модели, которая будет использоваться, если основная модель недоступна.
+    models: # Маппинг абстрактных возможностей на конкретные имена моделей в Ollama.
       FAST: "phi3"       # Быстрая модель для классификации, рутинга и т.д.
       BALANCED: "llama3" # Основная модель для RAG и чата
       VISION: "llava"      # Мультимодальная модель для анализа изображений
@@ -262,8 +259,7 @@ app:
       # Trade-off: выше значение -> лучше точность (recall), выше задержка (latency).
       ef-search: 64
 
-  # Настройки RAG-конвейера
-  rag:
+  rag: # Настройки RAG-конвейера
     # Стратегия поведения, если поиск не нашел документов.
     # "fixed" - вернуть стандартный ответ (быстро, безопасно).
     # "delegate" - (потребует реализации) попросить LLM ответить из общих знаний.
@@ -280,16 +276,14 @@ app:
         fts:
           top-k: 10
 
-  # Настройки для автоматической оценки качества
-  evaluation:
+  evaluation: # Настройки для автоматической оценки качества
     # F1-Score - гармоническое среднее между точностью (precision) и полнотой (recall).
     # Это ключевая метрика качества поиска. Если она упадет ниже этого значения,
     # в логах появится ошибка.
     f1-score-threshold: 0.85
     scheduler:
       enabled: true
-      # Запускать каждый день в 3:00 ночи
-      cron: "0 0 3 * * ?"
+      cron: "0 0 3 * * ?" # Запускать каждый день в 3:00 ночи
 
   optimization:
     index:
@@ -298,14 +292,19 @@ app:
       stale-document-detection:
         enabled: true
 
-  # Настройки для аналитических агентов
-  analysis:
+  analysis: # Настройки для аналитических агентов
     flakiness:
       # Порог в процентах. Тест считается "flaky", если падает чаще, чем в 5% случаев.
       failure-rate-threshold: 5.0
       # Минимальное количество запусков теста, чтобы он попал в анализ.
       # Предотвращает ложные срабатывания для новых тестов.
       min-runs-threshold: 10
+    cost-model:
+      per-dev-hour: 100.0
+      per-support-ticket: 25.0
+      per-lost-user: 200.0
+    autonomy:
+      cron: "0 0 7 * * MON-FRI" # Запуск автономного анализа в 7 утра по будням
 
   integrations:
     github:
@@ -342,9 +341,12 @@ app:
       base-url: "http://your-jenkins-instance:8080"
       username: "your-ci-user"
       api-token: "YourCiApiTokenOrPassword"
+    neo4j:
+      uri: "bolt://localhost:7687"
+      username: "neo4j"
+      password: "password"
 
-  # Настройки безопасности
-  security:
+  security: # Настройки безопасности
     pii-redaction:
       # Глобальный переключатель для сервиса маскирования.
       # Установите в 'false' для отключения маскирования.
