--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,9 @@ dependencies {
     // Графовая база данных Neo4j
     implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
 
+    // Библиотека для статистического анализа
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+
     // Отказоустойчивость и RAG-компоненты
     implementation 'io.github.resilience4j:resilience4j-spring-boot3'
     implementation 'io.github.resilience4j:resilience4j-reactor'
