--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -364,3 +364,9 @@ app:
         - "ey[a-zA-Z0-9_\\-]+\\.[a-zA-Z0-9_\\-]+\\.[a-zA-Z0-9_\\-]+"
         # Паттерн для поиска IP-адресов
         - "\\b(?:[0-9]{1,3}\\.){3}[0-9]{1,3}\\b"
+  indexing:
+    test-files:
+      path: "src/test/java"
+      scheduler:
+        enabled: true
+        cron: "0 0 5 * * ?" # Каждый день в 5 утра
